--- a/s1clone/s1clone.rc
+++ b/s1clone/s1clone.rc
@@ -44,7 +44,7 @@ IDD_PG_SELECT DIALOGEX 108, 7, 266, 193
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_RE2,"RichEdit20W",ES_CENTER | ES_MULTILINE | ES_READONLY | WS_DISABLED,7,7,252,100,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_RE2,"RichEdit20W",WS_DISABLED | 0x805,7,7,252,100,WS_EX_TRANSPARENT
     CONTROL         "&Read flash-image from s1mp3 player",IDC_RADIO_READ,
                     "Button",BS_AUTORADIOBUTTON | WS_TABSTOP,7,110,252,10
     CONTROL         "&Write flash-image to s1mp3 player",IDC_RADIO_WRITE,
@@ -58,7 +58,7 @@ IDD_PG_END DIALOGEX 108, 7, 266, 193
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_RE2,"RichEdit20W",ES_CENTER | ES_MULTILINE | ES_READONLY | WS_DISABLED,7,7,252,100,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_RE2,"RichEdit20W",WS_DISABLED | 0x805,7,7,252,100,WS_EX_TRANSPARENT
     PUSHBUTTON      "&Donate...",IDC_BTN_DONATE,91,110,84,26
 END
 
@@ -66,15 +66,15 @@ IDD_PG_INIT DIALOGEX 108, 7, 266, 193
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_RE2,"RichEdit20W",ES_CENTER | ES_MULTILINE | ES_READONLY | WS_DISABLED,7,7,252,119,WS_EX_TRANSPARENT
-    CONTROL         "",IDC_RE2_TERMS,"RichEdit20W",ES_MULTILINE | ES_READONLY | ES_NUMBER | WS_BORDER | WS_VSCROLL | WS_TABSTOP,7,126,252,60
+    CONTROL         "",IDC_RE2,"RichEdit20W",WS_DISABLED | 0x805,7,7,252,119,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_RE2_TERMS,"RichEdit20W",WS_BORDER | WS_VSCROLL | WS_TABSTOP | 0x2804,7,126,252,60
 END
 
 IDD_PG_FILE DIALOGEX 108, 7, 266, 193
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_RE2,"RichEdit20W",ES_CENTER | ES_MULTILINE | ES_READONLY | WS_DISABLED,7,7,252,100,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_RE2,"RichEdit20W",WS_DISABLED | 0x805,7,7,252,100,WS_EX_TRANSPARENT
     EDITTEXT        IDC_EDT_FILE,7,110,235,13,ES_AUTOHSCROLL
     PUSHBUTTON      "",IDC_BTN_OPEN,245,110,14,13,BS_ICON | BS_CENTER | BS_VCENTER | BS_FLAT
 END
@@ -83,7 +83,7 @@ IDD_PG_CLONE DIALOGEX 108, 7, 266, 193
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_RE2,"RichEdit20W",ES_CENTER | ES_MULTILINE | ES_READONLY | WS_DISABLED,7,7,252,90,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_RE2,"RichEdit20W",WS_DISABLED | 0x805,7,7,252,90,WS_EX_TRANSPARENT
     CONTROL         "...",IDC_TXT_STATUS,"Static",SS_LEFTNOWORDWRAP | SS_ENDELLIPSIS | WS_GROUP,7,100,252,9
     LISTBOX         IDC_LIST,7,110,252,57,LBS_NOINTEGRALHEIGHT | LBS_NOSEL | WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,7,172,252,14
@@ -93,7 +93,7 @@ IDD_PG_DEVICE DIALOGEX 108, 7, 266, 193
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_RE2,"RichEdit20W",ES_CENTER | ES_MULTILINE | ES_READONLY | WS_DISABLED,7,7,252,100,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_RE2,"RichEdit20W",WS_DISABLED | 0x805,7,7,252,100,WS_EX_TRANSPARENT
     CONTROL         "&Format disk (WARNING: ALL FILES WILL BE LOST!)",IDC_CHKBOX,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,112,235,10
     PUSHBUTTON      "",IDC_BTN_RELOAD,245,110,14,13,BS_ICON | BS_CENTER | BS_VCENTER | BS_FLAT
@@ -174,8 +174,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,4,0,1
- PRODUCTVERSION 1,4,0,1
+ FILEVERSION 2,1,0,0
+ PRODUCTVERSION 2,1,0,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -192,12 +192,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "http://www.s1mp3.de/"
             VALUE "FileDescription", "s1clone"
-            VALUE "FileVersion", "1, 4, 0, 1"
+            VALUE "FileVersion", "2, 1, 0, 0"
             VALUE "InternalName", "s1clone"
             VALUE "LegalCopyright", "Copyright (C) 2007-2008 wiRe <wiRe@gmx.net>"
             VALUE "OriginalFilename", "s1clone.exe"
             VALUE "ProductName", "s1clone"
-            VALUE "ProductVersion", "1, 4, 0, 1"
+            VALUE "ProductVersion", "2, 1, 0, 0"
         END
     END
     BLOCK "VarFileInfo"
